--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -4,3 +4,7 @@ connection.url=jdbc:oracle:thin:@localhost:1521:XE
 driver.class=oracle.jdbc.driver.OracleDriver
 name=valera
 password=qwerty
+initial.pool.size=5
+acquireIncrement=5
+maxPoolSize=10
+minPoolSize=5
