--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,13 @@
         <groupId>org.thymeleaf</groupId>
         <artifactId>thymeleaf-spring5</artifactId>
         <version>3.0.11.RELEASE</version>
-      </dependency>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.module</groupId>
+      <artifactId>jackson-module-kotlin</artifactId>
+      <version>2.10.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
