--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -1,10 +1,4 @@
-server.port=8888
-sourse.name=Oracle
-connection.url=jdbc:oracle:thin:@localhost:1521:XE
-driver.class=oracle.jdbc.driver.OracleDriver
-name=valera
-password=qwerty
-initial.pool.size=1
-acquireIncrement=5
-maxPoolSize=5
-minPoolSize=1
+data.JNDIname = myJNDIDBName
+url = t3://localhost:7001
+factory = weblogic.jndi.WLInitialContextFactory
+
