--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>book</groupId>
+  <groupId>worke3</groupId>
   <artifactId>worke3</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
@@ -75,7 +75,7 @@
       <artifactId>spring-security-config</artifactId>
       <version>${spring.version}</version>
     </dependency>
-      <dependency>
+    <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
