--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
       <version>${spring.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
@@ -100,6 +105,7 @@
       <artifactId>jackson-module-kotlin</artifactId>
       <version>2.10.2</version>
     </dependency>
+
   </dependencies>
 
   <build>
